# claude-hackathone

./: .env.example  .gitignore  CLAUDE.md  README.md  agentic-solution.md  architecture.html  presentation.html  presentation_haiku.html  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/agents/: architecture-diagram.md  coordinator.md  developer.md  hackathon-judge.md  my-agent-template.md
.claude/commands/: add-hardstop.md  eval-scenario.md  gen-architecture.md  mandate-check.md  new-specialist.md  new-tool.md  reasoning-trace.md  triage.md
.claude/tools/: generate_architecture.md  html_generator.md
.github/workflows/: presentation.yml
decisions/: ADR-001-coordinator-specialist-split.md  ADR-002-synchronous-hard-stop-hook.md  ADR-003-validation-retry-loop.md  README.md
docs/: architecture-adr.md  architecture.html  mandate.md
src/: config.py  main.py
src/agent/: coordinator.py
src/agent/subagents/: diff_analyzer.py  slide_writer.py
src/agents/: coordinator.py
src/agents/specialists/: networking.py  password_reset.py  software.py
src/hooks/: pre_tool_use.py
src/models/: schemas.py
src/tools/: coordinator_tools.py  github_tools.py  networking_tools.py  password_reset_tools.py  presentation_tools.py  software_tools.py
tests/: test_coordinator.py
tests/fixtures/: sample_commit.json
