[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "commit-presentation-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["anthropic>=0.40.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
